fix: activity list date contrast

--- a/src/scss/components/_activity-list.scss
+++ b/src/scss/components/_activity-list.scss
@@ -4,7 +4,6 @@
 	}
 
 	p {
-		color: var(--color-link-text);
 		margin: 0;
 	}
 }
